# Tomo

./: CMakeLists.txt  README.BUILD  README.md  bootstrap.sh  default.cfg
GEx/: CMakeLists.txt  README.md
GEx/include/: gex.hpp
GEx/include/boost/geometry/extensions/algorithms/: offset.hpp
GEx/include/gex/: algorithm.hpp  base.hpp  bsp.hpp  cgal.hpp  color.hpp  comp.hpp  index.hpp  io.hpp  misc.hpp  polygon.hpp  prim.hpp  qt.hpp  raster.hpp  shared.hpp
GEx/include/gex/algorithm/: Nearest.hpp  boost.hpp  boundingSegments.hpp  bounds.hpp  centroid.hpp  chop.hpp  closestPoint.hpp  connect.hpp  connectSegments.hpp  convert.hpp  difference.hpp  distance.hpp  envelope.hpp  extremePoints.hpp  fill.hpp  for_each.hpp  intersection.hpp  intersects.hpp  join.hpp  length.hpp  markerFromPoint.hpp  medial_axis.hpp  num.hpp  offset.hpp  pattern.hpp  perimeter.hpp  reverse.hpp  shift.hpp  step.hpp  thicken.hpp  transform.hpp  unify.hpp  union.hpp  util.hpp  voronoi.hpp  within.hpp
GEx/include/gex/algorithm/converter/: Bounds.hpp  Generic.hpp  LineString.hpp  Polygon.hpp  Ring.hpp  Segment.hpp
GEx/include/gex/algorithm/functor/: BoundingSegments.hpp  Branch.hpp  ConnectSegments.hpp  ForEach.hpp  ForEachComp.hpp  ForEachCurve.hpp  ForEachMesh.hpp  ForEachPoint.hpp  ForEachPointArray.hpp  ForEachPointPair.hpp  ForEachRing.hpp  ForEachSegment.hpp  Intersection.hpp  Join.hpp  JoinSegmentsToRings.hpp  JoinShortestPaths.hpp  Nearest.hpp  Offset.hpp  Pruning.hpp  SqrDistance.hpp
GEx/include/gex/algorithm/nearest/: Generic.hpp  Inserter.hpp  NearestContainer.hpp  Visitor.hpp
GEx/include/gex/algorithm/pattern/: Concentric.hpp  Hexagon.hpp  Linear.hpp
GEx/include/gex/base/: Axis.hpp  Bounds.hpp  Coords.hpp  Curve.hpp  EigenTypedefs.hpp  Frustum.hpp  Model.hpp  Packet.hpp  PolarVec.hpp  Range.hpp  Ray.hpp
GEx/include/gex/bsp/: Node.hpp  Tree.hpp  Visitor.hpp
GEx/include/gex/bsp/container/: PrimitiveContainer.hpp  Static.hpp  StaticWithPrimitives.hpp
GEx/include/gex/bsp/node/: BoundsExtension.hpp  Dynamic.hpp  Geometry.hpp  IntersectResult.hpp  Intersection.hpp  Static.hpp  attributes.hpp
GEx/include/gex/bsp/split/: Candidate.hpp  Cost.hpp  CostFunction.hpp  DominantAxis.hpp  Half.hpp  Pos.hpp
GEx/include/gex/color/: Color.hpp  Gradient.hpp
GEx/include/gex/comp/: PointCloud.hpp  TriangleMesh.hpp
GEx/include/gex/io/: DrawInterface.hpp  PLY.hpp  STL.hpp  SVG.hpp  read.hpp
GEx/include/gex/io/svg/: BSP.hpp  Bounds.hpp  Buffer.hpp  Color.hpp  Draw.hpp  LineString.hpp  Point.hpp  Polygon.hpp  RandomColor.hpp  Ring.hpp  Segment.hpp  Shape.hpp  Style.hpp  Text.hpp  Vertex.hpp
GEx/include/gex/misc/: assert.hpp
GEx/include/gex/prim/: BoundingBox.hpp  LineString.hpp  MultiPoint.hpp  MultiPolygon.hpp  OrthogonalPlane.hpp  Polygon.hpp  Ring.hpp  Segment.hpp  Sphere.hpp  Triangle.hpp  Vertex.hpp
GEx/include/gex/raster/: Image.hpp  draw_circle.hpp  edge.hpp  for_each.hpp  marching_squares.hpp  medial_axis.hpp  rasterize.hpp  util.hpp
GEx/include/gex/strategy/: join.hpp  medial_axis.hpp  offset.hpp
GEx/samples/: BoostPolygon.cpp  Chop.cpp  ClosestPoint.cpp  Connect.cpp  Curvature.cpp  GenerateTestData.cpp  Hexagon.cpp  Join.cpp  JoinLineStrings.cpp  Nearest.cpp  Offset (copy).cpp  Offset.cpp  OffsetLineString.cpp  OffsetSample.cpp  OffsetSegment.cpp  OffsetTest.cpp  OffsetWithDetails.cpp  Pattern.cpp  Shapes.cpp  Subsample.cpp  Thickening.cpp  Vec.cpp  Voronoi.cpp  create.hpp
GEx/samples/create/: circle.hpp  circleWith3Holes.hpp  fromTxt.hpp  irregular.hpp  meshes.hpp  segments.hpp  star.hpp
TbdLib/include/tbd/: config.h  gl.hpp
include/: tomo.hpp
include/tomo/: base.hpp  item.hpp  routing.hpp  slice.hpp  tool.hpp
include/tomo/base/: Device.hpp  Element.hpp  Id.hpp  Parameter.hpp  Ptr.hpp  Serialization.hpp  Set.hpp  Signal.hpp  Storage.hpp  TypeToStr.hpp  assert.hpp  debug.hpp  exception.hpp  gex.hpp  namespaces.hpp  util.hpp
include/tomo/device/: Device.hpp  Interface.hpp
include/tomo/item/: Config.hpp  FileSink.hpp  FileSource.hpp  Interface.hpp  Item.hpp  Mesh.hpp  PointCloud.hpp  Regions.hpp  Sink.hpp  Source.hpp  SourceAndSink.hpp
src/app/: ColorRange.cpp  Connection.cpp  DeviceNode.cpp  DummyNode.cpp  ElementForm.cpp  ElementForm.ui  ElementNode.cpp  ItemNode.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui  ParameterForm.ui  PluginLoader.cpp  PluginLoader.hpp  Port.cpp  Range.cpp  Range.ui  Rotation.cpp  Rotation.ui  ToolEdge.cpp  ToolLibrary.cpp  ToolLibrary.ui  ToolLibraryTree.cpp  ToolNode.cpp  ToolPreview.cpp  ToolchainComboBox.cpp  ToolchainEditor.cpp  ToolchainGL.cpp  ToolchainItem.cpp  ToolchainNavigator.cpp  ToolchainNavigator.ui  ToolchainTree.cpp  ToolchainTreeModel.cpp  Vector.cpp  Vector.ui  VerticalScrollArea.cpp  qutils.hpp  render.hpp  style.qrc  tomo.cpp
src/test/: ToolchainTest.cpp
src/toolset/: CMakeLists.txt  Test.cpp
src/toolset/fdm/: AnalyzeSampling.cpp  BetterPerimeter.cpp  Brim.cpp  Caps.cpp  Connect.cpp  ExtruderSpeed.cpp  ExtruderTemperaturePerLayer.cpp  Gear.cpp  GetFromRegions.cpp  Merge.cpp  PatternInfill.cpp  Perimeter.cpp  Raft.cpp  Route_query.cpp  Route_visual.cpp  Routing.cpp  Sampler.cpp  Shell.cpp  Skirt.cpp  SliceGraph_query.cpp  SliceGraph_visual.cpp  SlicesToPaths.cpp  SplitLayers.cpp  Support.cpp  Thickening.cpp  UltiMaker.cpp  debug_WKT.cpp
src/toolset/fdm/item/: GCode.hpp  Route.hpp  SliceGraph.hpp
src/toolset/fdm/query/: Path.hpp  Slice.hpp
src/toolset/fdm/routing/: Event.hpp  Extruder.hpp  GCode.hpp  Move.hpp  MoveMaker.hpp  Path.hpp  PathGroup.hpp  State.hpp  junction.hpp  overlap.hpp  routing.hpp  shift.hpp  slice.hpp  zmove.hpp
src/toolset/fdm/test/: Route.cpp
src/toolset/fdm/tool/: Chain.hpp  Demuxer.hpp  Device.hpp  LineFilling.hpp  Muxer.hpp  Pattern.hpp  Set.hpp  Skirt.hpp  Transformer.hpp  perimeter.hpp
src/toolset/fdm/visual/: Path.hpp  Scene.hpp  colorizer.hpp  slice.hpp
src/toolset/fdm/visual/slice/: Defect.hpp  Solid.hpp  Thin.hpp  Topology.hpp  Visual.hpp
src/toolset/generic/: ExtractMeshSegments.cpp  Place.cpp  RegionOperation.cpp
src/toolset/generic/test/: NewToolchain.cpp
(+188 files in other folders)
